--- a/style.css
+++ b/style.css
@@ -1,54 +1,8 @@
-:root {
-  --game-square-border: 1px solid black;
+.game-container {
+  display: grid;
+  grid-template-columns: 3;
+  grid-template-rows: 3;
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.game-container {
-  margin-top: 8%;
-
-  display: grid;
-  grid-template-rows: repeat(3, 150px);
-  grid-template-columns: repeat(3, 150px);
-}
-
-.field {
-  display: flex;
-
-  align-items: center;
-  justify-content: center;
-}
-
-#a {
-  border-right: var(--game-square-border);
-  border-bottom: var(--game-square-border);
-}
-#b {
-  border-bottom: var(--game-square-border);
-}
-#c {
-  border-bottom: var(--game-square-border);
-  border-left: var(--game-square-border);
-}
-#d {
-  border-right: var(--game-square-border);
-}
-
-#f {
-  border-left: var(--game-square-border);
-}
-#g {
-  border-top: var(--game-square-border);
-  border-right: var(--game-square-border);
-}
-#h {
-  border-top: var(--game-square-border);
-}
-#i {
-  border-top: var(--game-square-border);
-  border-left: var(--game-square-border);
 }
