--- a/style.css
+++ b/style.css
@@ -1,16 +1,44 @@
 :root {
   --game-square-border: 1px solid black;
 }
-
+h2 {
+  margin: 0px;
+}
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.game-container {
-  margin-top: 8%;
+.header {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  padding: 15px;
+  justify-content: center;
+  border-bottom: 3px solid black;
+}
 
+.player-container {
+  display: flex;
+  width: 30%;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.player {
+  background-color: rgb(240, 143, 213);
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.game-container {
+  margin-top: 5%;
   display: grid;
   grid-template-rows: repeat(3, 150px);
   grid-template-columns: repeat(3, 150px);
