--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --game-square-border: 1px solid black;
+  font-family: "Gaegu", cursive;
 }
 h2 {
   margin: 0px;
@@ -18,6 +19,7 @@ body {
   padding: 15px;
   justify-content: center;
   border-bottom: 3px solid black;
+  font-size: 500%;
 }
 
 .player-container {
@@ -28,7 +30,7 @@ body {
 }
 
 .player {
-  background-color: rgb(240, 143, 213);
+  /* background-color: rgb(240, 143, 213); */
   width: 80px;
   height: 80px;
   display: flex;
@@ -38,20 +40,27 @@ body {
 }
 
 .game-container {
-  margin-top: 5%;
+  padding: 5%;
   display: grid;
+  width: 100%;
+  justify-content: center;
   grid-template-rows: repeat(3, 150px);
   grid-template-columns: repeat(3, 150px);
+  background-color: rgba(245, 245, 30, 0.872);
 }
 
 .field {
   display: flex;
-
+  font-size: 100px;
   align-items: center;
   justify-content: center;
 }
 
 .field:hover {
+  background-color: rgb(240, 143, 213);
+}
+
+.turn-highlight {
   background-color: rgb(240, 143, 213);
 }
 
